--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>tradeglance-ui</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
-    <meta property="og:image" content="/og-image.png" />
+    <title>Aspens Markets Stack Demo</title>
+    <meta name="description" content="Aspens Markets Stack Demo" />
+    <meta name="author" content="aspens devs" />
   </head>
 
   <body>
