--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <title>Aspens Markets Stack Demo</title>
     <meta name="description" content="Aspens Markets Stack Demo" />
     <meta name="author" content="aspens devs" />
