fix(ui): skins the site with materialize

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Aspens Markets Stack Demo</title>
     <meta name="description" content="Aspens Markets Stack Demo" />
     <meta name="author" content="aspens devs" />
+    <!-- Material Icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   </head>
 
   <body>
