--- a/index.html
+++ b/index.html
@@ -7,11 +7,20 @@
     <title>Aspens Markets Stack Demo</title>
     <meta name="description" content="Aspens Markets Stack Demo" />
     <meta name="author" content="aspens devs" />
+    <!-- Material Icons for Material Design components -->
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <!-- Materialize CSS for enhanced cross-browser compatibility -->
+    <link rel="stylesheet" href="/materialize.min.css" />
   </head>
 
   <body>
     <main id="root"></main>
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
+    <!-- Materialize JavaScript for component functionality -->
+    <script src="/materialize.min.js"></script>
   </body>
 </html>
