--- a/index.html
+++ b/index.html
@@ -3,13 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="color-scheme" content="light only" />
+    <meta name="supported-color-schemes" content="light" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <title>Aspens Markets Stack Demo</title>
     <meta name="description" content="Aspens Markets Stack Demo" />
     <meta name="author" content="aspens devs" />
-    <!-- Material Icons for Material Design components -->
+    <!-- Material Icons for Material Design components with proper loading -->
     <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Preload Material Icons for better performance -->
+    <link
+      rel="preload"
+      href="https://fonts.gstatic.com/s/materialicons/v140/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
+    <!-- Roboto font for better text rendering -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
       rel="stylesheet"
     />
     <!-- Materialize CSS for enhanced cross-browser compatibility -->
